# ai-policy-gap-analysis

./: .gitignore  README.md  docker-compose.yml
backend/: config.py  main.py  pyproject.toml  requirements.txt  test_parser.py  test_sizes.py
backend/models/: schemas.py
backend/pipelines/: analysis.py  brd_analysis.py  classifier.py  ingestion.py  retrieval.py
backend/services/: embedder.py  llm_client.py  pdf_parser.py  weaviate_client.py
frontend/: app.js  index.html  style.css
