[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "weaviate-client==4.6.5",
    "sentence-transformers>=2.7.0",
    "pdfplumber==0.11.0",
    "pypdf>=4.3.0",
    "httpx==0.27.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1"

]
